exports[`test renders correctly 1`] = `
<div
  className="my-component"
  onClick={[Function bound handleClick]}>
  <span
    className="count">
    1
  </span>
  <strong>
    Hello World!
  </strong>
</div>
`;

exports[`test renders span after setState 1`] = `
<span
  className="count">
  42
</span>
`;
